# OpenServer

./: .gitignore  CONTRIBUTING.md  OpenServer.py  README.md  SECURITY.md  changelog.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml
doc/: architecture-contract-first-draft.md
openserver/: OpenServer.py  PROSPER.py  __init__.py  openserver.py  prosper.py
resources/: gap_testfile.gap  prosper_testfile.OUT
tests/: test_openserver.py  test_prosper.py
